lab-10/Syntax/Nameless/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Syntax/Nameless/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListExpr -> ListExpr                       (1)
	%start_pExpr -> Expr                               (2)
	%start_pMatchCase -> MatchCase                     (3)
	%start_pListMatchCase -> ListMatchCase             (4)
	%start_pBinding -> Binding                         (5)
	%start_pListBinding -> ListBinding                 (6)
	%start_pExpr1 -> Expr1                             (7)
	%start_pExpr2 -> Expr2                             (8)
	%start_pExpr3 -> Expr3                             (9)
	%start_pType -> Type                               (10)
	%start_pType1 -> Type1                             (11)
	%start_pType2 -> Type2                             (12)
	%start_pFieldType -> FieldType                     (13)
	%start_pListFieldType -> ListFieldType             (14)
	%start_pTyping -> Typing                           (15)
	Ident -> L_Ident                                   (16)
	Integer -> L_integ                                 (17)
	Program -> ListExpr                                (18)
	ListExpr ->                                        (19)
	ListExpr -> Expr                                   (20)
	ListExpr -> Expr ';' ListExpr                      (21)
	Expr -> 'if' Expr 'then' Expr 'else' Expr          (22)
	Expr -> 'let' Expr 'in' Expr                       (23)
	Expr -> 'fun' '(' Type ')' '{' 'return' Expr '}'   (24)
	Expr -> '{' ListBinding '}'                        (25)
	Expr -> '<' Ident '=' Expr '>' 'as' '<' ListFieldType '>'   (26)
	Expr -> 'match' Expr1 '{' ListMatchCase '}'        (27)
	Expr -> '[' ListExpr ']' 'as' '[' Type ']'         (28)
	Expr -> Expr1                                      (29)
	MatchCase -> '<' Ident '>' '=>' Expr               (30)
	ListMatchCase ->                                   (31)
	ListMatchCase -> MatchCase                         (32)
	ListMatchCase -> MatchCase ';' ListMatchCase       (33)
	Binding -> Ident '=' Expr                          (34)
	ListBinding ->                                     (35)
	ListBinding -> Binding                             (36)
	ListBinding -> Binding ',' ListBinding             (37)
	Expr1 -> Expr1 Expr2                               (38)
	Expr1 -> Expr2                                     (39)
	Expr2 -> 'cons' Expr3 Expr3                        (40)
	Expr2 -> 'head' Expr3                              (41)
	Expr2 -> 'tail' Expr3                              (42)
	Expr2 -> 'succ' Expr3                              (43)
	Expr2 -> 'pred' Expr3                              (44)
	Expr2 -> 'iszero' Expr3                            (45)
	Expr2 -> 'fix' Expr3                               (46)
	Expr2 -> 'isempty' Expr3                           (47)
	Expr2 -> 'fold' '[' Type ']' Expr3                 (48)
	Expr2 -> 'unfold' '[' Type ']' Expr3               (49)
	Expr2 -> Expr3                                     (50)
	Expr3 -> Expr3 '.' Ident                           (51)
	Expr3 -> 'true'                                    (52)
	Expr3 -> 'false'                                   (53)
	Expr3 -> '0'                                       (54)
	Expr3 -> Ident                                     (55)
	Expr3 -> Integer                                   (56)
	Expr3 -> '(' Expr ')'                              (57)
	Type -> Type1 '->' Type                            (58)
	Type -> 'µ' '(' Type ')'                           (59)
	Type -> Type1                                      (60)
	Type1 -> '{' ListFieldType '}'                     (61)
	Type1 -> '<' ListFieldType '>'                     (62)
	Type1 -> '[' Type ']'                              (63)
	Type1 -> Type2                                     (64)
	Type2 -> 'Bool'                                    (65)
	Type2 -> 'Nat'                                     (66)
	Type2 -> Ident                                     (67)
	Type2 -> Integer                                   (68)
	Type2 -> '(' Type ')'                              (69)
	FieldType -> Ident ':' Type                        (70)
	ListFieldType ->                                   (71)
	ListFieldType -> FieldType                         (72)
	ListFieldType -> FieldType ',' ListFieldType       (73)
	Typing -> Expr ':' Type                            (74)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'->'           { PT _ (TS _ 4) }
	'.'            { PT _ (TS _ 5) }
	'0'            { PT _ (TS _ 6) }
	':'            { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'<'            { PT _ (TS _ 9) }
	'='            { PT _ (TS _ 10) }
	'=>'           { PT _ (TS _ 11) }
	'>'            { PT _ (TS _ 12) }
	'Bool'         { PT _ (TS _ 13) }
	'Nat'          { PT _ (TS _ 14) }
	'['            { PT _ (TS _ 15) }
	']'            { PT _ (TS _ 16) }
	'as'           { PT _ (TS _ 17) }
	'cons'         { PT _ (TS _ 18) }
	'else'         { PT _ (TS _ 19) }
	'false'        { PT _ (TS _ 20) }
	'fix'          { PT _ (TS _ 21) }
	'fold'         { PT _ (TS _ 22) }
	'fun'          { PT _ (TS _ 23) }
	'head'         { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'in'           { PT _ (TS _ 26) }
	'isempty'      { PT _ (TS _ 27) }
	'iszero'       { PT _ (TS _ 28) }
	'let'          { PT _ (TS _ 29) }
	'match'        { PT _ (TS _ 30) }
	'pred'         { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'succ'         { PT _ (TS _ 33) }
	'tail'         { PT _ (TS _ 34) }
	'then'         { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'unfold'       { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'}'            { PT _ (TS _ 39) }
	'µ'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListExpr rule  1
	%start_pExpr    rule  2
	%start_pMatchCase rule  3
	%start_pListMatchCase rule  4
	%start_pBinding rule  5
	%start_pListBinding rule  6
	%start_pExpr1   rule  7
	%start_pExpr2   rule  8
	%start_pExpr3   rule  9
	%start_pType    rule  10
	%start_pType1   rule  11
	%start_pType2   rule  12
	%start_pFieldType rule  13
	%start_pListFieldType rule  14
	%start_pTyping  rule  15
	Ident           rule  16
	Integer         rule  17
	Program         rule  18
	ListExpr        rules 19, 20, 21
	Expr            rules 22, 23, 24, 25, 26, 27, 28, 29
	MatchCase       rule  30
	ListMatchCase   rules 31, 32, 33
	Binding         rule  34
	ListBinding     rules 35, 36, 37
	Expr1           rules 38, 39
	Expr2           rules 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50
	Expr3           rules 51, 52, 53, 54, 55, 56, 57
	Type            rules 58, 59, 60
	Type1           rules 61, 62, 63, 64
	Type2           rules 65, 66, 67, 68, 69
	FieldType       rule  70
	ListFieldType   rules 71, 72, 73
	Typing          rule  74

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46
	%eof           reduce using rule 19

	Ident          goto state 18
	Integer        goto state 19
	Program        goto state 79
	ListExpr       goto state 80
	Expr           goto state 78
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23

State 1

	%start_pListExpr -> . ListExpr                      (rule 1)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46
	%eof           reduce using rule 19

	Ident          goto state 18
	Integer        goto state 19
	ListExpr       goto state 77
	Expr           goto state 78
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23

State 2

	%start_pExpr -> . Expr                              (rule 2)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr           goto state 76
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23

State 3

	%start_pMatchCase -> . MatchCase                    (rule 3)

	'<'            shift, and enter state 74

	MatchCase      goto state 75

State 4

	%start_pListMatchCase -> . ListMatchCase            (rule 4)

	'<'            shift, and enter state 74
	%eof           reduce using rule 31

	MatchCase      goto state 72
	ListMatchCase  goto state 73

State 5

	%start_pBinding -> . Binding                        (rule 5)

	L_Ident        shift, and enter state 17

	Ident          goto state 68
	Binding        goto state 71

State 6

	%start_pListBinding -> . ListBinding                (rule 6)

	L_Ident        shift, and enter state 17
	%eof           reduce using rule 35

	Ident          goto state 68
	Binding        goto state 69
	ListBinding    goto state 70

State 7

	%start_pExpr1 -> . Expr1                            (rule 7)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'head'         shift, and enter state 34
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr1          goto state 67
	Expr2          goto state 22
	Expr3          goto state 23

State 8

	%start_pExpr2 -> . Expr2                            (rule 8)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'head'         shift, and enter state 34
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr2          goto state 66
	Expr3          goto state 23

State 9

	%start_pExpr3 -> . Expr3                            (rule 9)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 65

State 10

	%start_pType -> . Type                              (rule 10)

	'('            shift, and enter state 54
	'<'            shift, and enter state 59
	'Bool'         shift, and enter state 55
	'Nat'          shift, and enter state 56
	'['            shift, and enter state 60
	'{'            shift, and enter state 61
	'µ'            shift, and enter state 64
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 51
	Integer        goto state 52
	Type           goto state 62
	Type1          goto state 63
	Type2          goto state 58

State 11

	%start_pType1 -> . Type1                            (rule 11)

	'('            shift, and enter state 54
	'<'            shift, and enter state 59
	'Bool'         shift, and enter state 55
	'Nat'          shift, and enter state 56
	'['            shift, and enter state 60
	'{'            shift, and enter state 61
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 51
	Integer        goto state 52
	Type1          goto state 57
	Type2          goto state 58

State 12

	%start_pType2 -> . Type2                            (rule 12)

	'('            shift, and enter state 54
	'Bool'         shift, and enter state 55
	'Nat'          shift, and enter state 56
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 51
	Integer        goto state 52
	Type2          goto state 53

State 13

	%start_pFieldType -> . FieldType                    (rule 13)

	L_Ident        shift, and enter state 17

	Ident          goto state 47
	FieldType      goto state 50

State 14

	%start_pListFieldType -> . ListFieldType            (rule 14)

	L_Ident        shift, and enter state 17
	%eof           reduce using rule 71

	Ident          goto state 47
	FieldType      goto state 48
	ListFieldType  goto state 49

State 15

	%start_pTyping -> . Typing                          (rule 15)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr           goto state 20
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23
	Typing         goto state 24

State 16

	Ident -> . L_Ident                                  (rule 16)

	L_Ident        shift, and enter state 17


State 17

	Ident -> L_Ident .                                  (rule 16)

	'('            reduce using rule 16
	')'            reduce using rule 16
	','            reduce using rule 16
	'->'           reduce using rule 16
	'.'            reduce using rule 16
	'0'            reduce using rule 16
	':'            reduce using rule 16
	';'            reduce using rule 16
	'='            reduce using rule 16
	'>'            reduce using rule 16
	']'            reduce using rule 16
	'cons'         reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'fix'          reduce using rule 16
	'fold'         reduce using rule 16
	'head'         reduce using rule 16
	'in'           reduce using rule 16
	'isempty'      reduce using rule 16
	'iszero'       reduce using rule 16
	'pred'         reduce using rule 16
	'succ'         reduce using rule 16
	'tail'         reduce using rule 16
	'then'         reduce using rule 16
	'true'         reduce using rule 16
	'unfold'       reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_Ident        reduce using rule 16
	L_integ        reduce using rule 16
	%eof           reduce using rule 16


State 18

	Expr3 -> Ident .                                    (rule 55)

	'('            reduce using rule 55
	')'            reduce using rule 55
	','            reduce using rule 55
	'.'            reduce using rule 55
	'0'            reduce using rule 55
	':'            reduce using rule 55
	';'            reduce using rule 55
	'>'            reduce using rule 55
	']'            reduce using rule 55
	'cons'         reduce using rule 55
	'else'         reduce using rule 55
	'false'        reduce using rule 55
	'fix'          reduce using rule 55
	'fold'         reduce using rule 55
	'head'         reduce using rule 55
	'in'           reduce using rule 55
	'isempty'      reduce using rule 55
	'iszero'       reduce using rule 55
	'pred'         reduce using rule 55
	'succ'         reduce using rule 55
	'tail'         reduce using rule 55
	'then'         reduce using rule 55
	'true'         reduce using rule 55
	'unfold'       reduce using rule 55
	'{'            reduce using rule 55
	'}'            reduce using rule 55
	L_Ident        reduce using rule 55
	L_integ        reduce using rule 55
	%eof           reduce using rule 55


State 19

	Expr3 -> Integer .                                  (rule 56)

	'('            reduce using rule 56
	')'            reduce using rule 56
	','            reduce using rule 56
	'.'            reduce using rule 56
	'0'            reduce using rule 56
	':'            reduce using rule 56
	';'            reduce using rule 56
	'>'            reduce using rule 56
	']'            reduce using rule 56
	'cons'         reduce using rule 56
	'else'         reduce using rule 56
	'false'        reduce using rule 56
	'fix'          reduce using rule 56
	'fold'         reduce using rule 56
	'head'         reduce using rule 56
	'in'           reduce using rule 56
	'isempty'      reduce using rule 56
	'iszero'       reduce using rule 56
	'pred'         reduce using rule 56
	'succ'         reduce using rule 56
	'tail'         reduce using rule 56
	'then'         reduce using rule 56
	'true'         reduce using rule 56
	'unfold'       reduce using rule 56
	'{'            reduce using rule 56
	'}'            reduce using rule 56
	L_Ident        reduce using rule 56
	L_integ        reduce using rule 56
	%eof           reduce using rule 56


State 20

	Typing -> Expr . ':' Type                           (rule 74)

	':'            shift, and enter state 114


State 21

	Expr -> Expr1 .                                     (rule 29)
	Expr1 -> Expr1 . Expr2                              (rule 38)

	'('            shift, and enter state 25
	')'            reduce using rule 29
	','            reduce using rule 29
	'0'            shift, and enter state 26
	':'            reduce using rule 29
	';'            reduce using rule 29
	'>'            reduce using rule 29
	']'            reduce using rule 29
	'cons'         shift, and enter state 29
	'else'         reduce using rule 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'head'         shift, and enter state 34
	'in'           reduce using rule 29
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'then'         reduce using rule 29
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'}'            reduce using rule 29
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46
	%eof           reduce using rule 29

	Ident          goto state 18
	Integer        goto state 19
	Expr2          goto state 86
	Expr3          goto state 23

State 22

	Expr1 -> Expr2 .                                    (rule 39)

	'('            reduce using rule 39
	')'            reduce using rule 39
	','            reduce using rule 39
	'0'            reduce using rule 39
	':'            reduce using rule 39
	';'            reduce using rule 39
	'>'            reduce using rule 39
	']'            reduce using rule 39
	'cons'         reduce using rule 39
	'else'         reduce using rule 39
	'false'        reduce using rule 39
	'fix'          reduce using rule 39
	'fold'         reduce using rule 39
	'head'         reduce using rule 39
	'in'           reduce using rule 39
	'isempty'      reduce using rule 39
	'iszero'       reduce using rule 39
	'pred'         reduce using rule 39
	'succ'         reduce using rule 39
	'tail'         reduce using rule 39
	'then'         reduce using rule 39
	'true'         reduce using rule 39
	'unfold'       reduce using rule 39
	'{'            reduce using rule 39
	'}'            reduce using rule 39
	L_Ident        reduce using rule 39
	L_integ        reduce using rule 39
	%eof           reduce using rule 39


State 23

	Expr2 -> Expr3 .                                    (rule 50)
	Expr3 -> Expr3 . '.' Ident                          (rule 51)

	'('            reduce using rule 50
	')'            reduce using rule 50
	','            reduce using rule 50
	'.'            shift, and enter state 87
	'0'            reduce using rule 50
	':'            reduce using rule 50
	';'            reduce using rule 50
	'>'            reduce using rule 50
	']'            reduce using rule 50
	'cons'         reduce using rule 50
	'else'         reduce using rule 50
	'false'        reduce using rule 50
	'fix'          reduce using rule 50
	'fold'         reduce using rule 50
	'head'         reduce using rule 50
	'in'           reduce using rule 50
	'isempty'      reduce using rule 50
	'iszero'       reduce using rule 50
	'pred'         reduce using rule 50
	'succ'         reduce using rule 50
	'tail'         reduce using rule 50
	'then'         reduce using rule 50
	'true'         reduce using rule 50
	'unfold'       reduce using rule 50
	'{'            reduce using rule 50
	'}'            reduce using rule 50
	L_Ident        reduce using rule 50
	L_integ        reduce using rule 50
	%eof           reduce using rule 50


State 24

	%start_pTyping -> Typing .                          (rule 15)

	%eof           accept


State 25

	Expr3 -> '(' . Expr ')'                             (rule 57)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr           goto state 113
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23

State 26

	Expr3 -> '0' .                                      (rule 54)

	'('            reduce using rule 54
	')'            reduce using rule 54
	','            reduce using rule 54
	'.'            reduce using rule 54
	'0'            reduce using rule 54
	':'            reduce using rule 54
	';'            reduce using rule 54
	'>'            reduce using rule 54
	']'            reduce using rule 54
	'cons'         reduce using rule 54
	'else'         reduce using rule 54
	'false'        reduce using rule 54
	'fix'          reduce using rule 54
	'fold'         reduce using rule 54
	'head'         reduce using rule 54
	'in'           reduce using rule 54
	'isempty'      reduce using rule 54
	'iszero'       reduce using rule 54
	'pred'         reduce using rule 54
	'succ'         reduce using rule 54
	'tail'         reduce using rule 54
	'then'         reduce using rule 54
	'true'         reduce using rule 54
	'unfold'       reduce using rule 54
	'{'            reduce using rule 54
	'}'            reduce using rule 54
	L_Ident        reduce using rule 54
	L_integ        reduce using rule 54
	%eof           reduce using rule 54


State 27

	Expr -> '<' . Ident '=' Expr '>' 'as' '<' ListFieldType '>'    (rule 26)

	L_Ident        shift, and enter state 17

	Ident          goto state 112

State 28

	Expr -> '[' . ListExpr ']' 'as' '[' Type ']'        (rule 28)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	']'            reduce using rule 19
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	ListExpr       goto state 111
	Expr           goto state 78
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23

State 29

	Expr2 -> 'cons' . Expr3 Expr3                       (rule 40)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 110

State 30

	Expr3 -> 'false' .                                  (rule 53)

	'('            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	'.'            reduce using rule 53
	'0'            reduce using rule 53
	':'            reduce using rule 53
	';'            reduce using rule 53
	'>'            reduce using rule 53
	']'            reduce using rule 53
	'cons'         reduce using rule 53
	'else'         reduce using rule 53
	'false'        reduce using rule 53
	'fix'          reduce using rule 53
	'fold'         reduce using rule 53
	'head'         reduce using rule 53
	'in'           reduce using rule 53
	'isempty'      reduce using rule 53
	'iszero'       reduce using rule 53
	'pred'         reduce using rule 53
	'succ'         reduce using rule 53
	'tail'         reduce using rule 53
	'then'         reduce using rule 53
	'true'         reduce using rule 53
	'unfold'       reduce using rule 53
	'{'            reduce using rule 53
	'}'            reduce using rule 53
	L_Ident        reduce using rule 53
	L_integ        reduce using rule 53
	%eof           reduce using rule 53


State 31

	Expr2 -> 'fix' . Expr3                              (rule 46)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 109

State 32

	Expr2 -> 'fold' . '[' Type ']' Expr3                (rule 48)

	'['            shift, and enter state 108


State 33

	Expr -> 'fun' . '(' Type ')' '{' 'return' Expr '}'    (rule 24)

	'('            shift, and enter state 107


State 34

	Expr2 -> 'head' . Expr3                             (rule 41)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 106

State 35

	Expr -> 'if' . Expr 'then' Expr 'else' Expr         (rule 22)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr           goto state 105
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23

State 36

	Expr2 -> 'isempty' . Expr3                          (rule 47)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 104

State 37

	Expr2 -> 'iszero' . Expr3                           (rule 45)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 103

State 38

	Expr -> 'let' . Expr 'in' Expr                      (rule 23)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'<'            shift, and enter state 27
	'['            shift, and enter state 28
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'fun'          shift, and enter state 33
	'head'         shift, and enter state 34
	'if'           shift, and enter state 35
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'let'          shift, and enter state 38
	'match'        shift, and enter state 39
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	'{'            shift, and enter state 45
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr           goto state 102
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23

State 39

	Expr -> 'match' . Expr1 '{' ListMatchCase '}'       (rule 27)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'cons'         shift, and enter state 29
	'false'        shift, and enter state 30
	'fix'          shift, and enter state 31
	'fold'         shift, and enter state 32
	'head'         shift, and enter state 34
	'isempty'      shift, and enter state 36
	'iszero'       shift, and enter state 37
	'pred'         shift, and enter state 40
	'succ'         shift, and enter state 41
	'tail'         shift, and enter state 42
	'true'         shift, and enter state 43
	'unfold'       shift, and enter state 44
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr1          goto state 101
	Expr2          goto state 22
	Expr3          goto state 23

State 40

	Expr2 -> 'pred' . Expr3                             (rule 44)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 100

State 41

	Expr2 -> 'succ' . Expr3                             (rule 43)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 99

State 42

	Expr2 -> 'tail' . Expr3                             (rule 42)

	'('            shift, and enter state 25
	'0'            shift, and enter state 26
	'false'        shift, and enter state 30
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_integ        shift, and enter state 46

	Ident          goto state 18
	Integer        goto state 19
	Expr3          goto state 98

State 43

	Expr3 -> 'true' .                                   (rule 52)
